add header and structure and placeholders

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,25 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Have a safe plantcation</title>
 </head>
+
 <body>
-    <p><h2>This site</h2> is aimed towards everyone who seriously worries sout their plants while they are away on vacation. <br>
-    <hr>
-    There are so many ways to make sure your plants are hydrated while you´re gone. But which one is the best for you, yout budget and the time for how long you will be gone?
-    <hr>
-    They will miss you!
-    </p>
+    <header id="header">
+        <span id="logo-big">
+            <h1>PlantCation</h1>
+            <p>Watering Made Easy</p>
+        </span>
+        <span>
+            <nav>
+                <ul id="navigation-list">
+                    <li class="nav-item">Home</li>
+                    <li class="nav-item">About</li>
+                    <li class="nav-item">Products</li>
+                    <li class="nav-item">Shop</li>
+                    <li class="nav-item">Sign Up!</li>
+                </ul>
+            </nav>
+        </span>
+    </header>
 </body>
+
 </html>
