add about section and structure grid 2 col. add owner picture

--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
             </nav>
         </span>
     </header>
+    <div id="carousel"></div>
+    <section>
+        <div id="about-container">
+            <div class="about-item">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt natus dolorum voluptate eum aut odio aperiam a. Odio eaque est harum inventore ipsum illum vel? Repudiandae esse quo veniam praesentium?</p>
+            </div>
+            <div class="about-item" id="owner-picture">
+                <p></p>
+            </div>
+
+        </div>
+    </section>
+
 </body>
 
 </html>
