last commit went wrong. This should be it

--- a/index.html
+++ b/index.html
@@ -31,14 +31,22 @@
     <section>
         <div id="about-container">
             <div class="about-item">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt natus dolorum voluptate eum aut odio aperiam a. Odio eaque est harum inventore ipsum illum vel? Repudiandae esse quo veniam praesentium?</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt natus dolorum voluptate eum aut
+                    odio aperiam a. Odio eaque est harum inventore ipsum illum vel? Repudiandae esse quo veniam
+                    praesentium?</p>
             </div>
-            <div class="about-item" id="owner-picture">
-                <p></p>
+            <div></div>
+            <div id="owner-picture">
             </div>
-
         </div>
     </section>
+    <footer id="footer-container">
+        <p>twitter</p>
+        <p>facebook</p>
+        <p>instagram</p>
+    </footer>
+
+
 
 </body>
 
