add design to about section, add fun quote, adjusting for all screens

--- a/index.html
+++ b/index.html
@@ -29,13 +29,17 @@
     </header>
     <div id="carousel"></div>
     <section>
+        <div id="fun-quote">
+            <h2 >"Its <span>SOO easy"</span></h2>
+            <p><i>once you know how to do it! </i></p>
+        </div>
         <div id="about-container">
             <div class="about-item">
+                <h2>"nice awesome super duper quote"</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt natus dolorum voluptate eum aut
                     odio aperiam a. Odio eaque est harum inventore ipsum illum vel? Repudiandae esse quo veniam
                     praesentium?</p>
             </div>
-            <div></div>
             <div id="owner-picture">
             </div>
         </div>
