add animation to quote, add shadows to logo

--- a/index.html
+++ b/index.html
@@ -27,18 +27,23 @@
             </nav>
         </span>
     </header>
-    <div id="carousel"></div>
+    <div id="carousel-container">
+        <div id="carousel">    
+        </div>
+    </div>
     <section>
-        <div id="fun-quote">
-            <h2 >"Its <span>SOO easy"</span></h2>
-            <p><i>once you know how to do it! </i></p>
+        <div id="fun-quote-container">
+            <div id="fun-quote-text">
+                <h2>"Its <span>SOO easy"</span></h2>
+                <p><i>once you know how to do it! </i></p>
+            </div>
         </div>
         <div id="about-container">
             <div class="about-item">
-                <h2>"nice awesome super duper quote"</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt natus dolorum voluptate eum aut
+                <h2>nice awesome super duper quote</h2>
+                <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt natus dolorum voluptate eum aut
                     odio aperiam a. Odio eaque est harum inventore ipsum illum vel? Repudiandae esse quo veniam
-                    praesentium?</p>
+                    praesentium?"</p>
             </div>
             <div id="owner-picture">
             </div>
