add capability for header and footer for screens under 650px

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    
     <title>Have a safe plantcation</title>
 </head>
 
@@ -34,13 +35,13 @@
     <section>
         <div id="fun-quote-container">
             <div id="fun-quote-text">
-                <h2>"Its <span>SOO easy"</span></h2>
+                <h2>"Its <span>REALLY"</span> easy</h2>
                 <p><i>once you know how to do it! </i></p>
             </div>
         </div>
         <div id="about-container">
             <div class="about-item">
-                <h2>nice awesome super duper quote</h2>
+                <h2>"nice awesome super duper quote"</h2>
                 <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt natus dolorum voluptate eum aut
                     odio aperiam a. Odio eaque est harum inventore ipsum illum vel? Repudiandae esse quo veniam
                     praesentium?"</p>
@@ -50,13 +51,22 @@
         </div>
     </section>
     <footer id="footer-container">
-        <p>twitter</p>
-        <p>facebook</p>
-        <p>instagram</p>
+        <p><i class="fa-brands fa-twitter"></i></p>
+        <p><i class="fa-brands fa-facebook"></i></p>
+        <p><i class="fa-brands fa-instagram"></i></p>
+        <p>Opening hours:<br>
+            09:00-18:00<br>
+            Monday-Thursday
+        </p>
+        <p></p>
+        <p>Location<br>
+        24 st. Patrick road<br>
+        plant-town</p>
+        <p></p>
     </footer>
 
 
-
+<script src="https://kit.fontawesome.com/51932b41cf.js" crossorigin="anonymous"></script> 
 </body>
 
 </html>
