add video/product section

--- a/index.html
+++ b/index.html
@@ -50,16 +50,35 @@
             </div>
         </div>
     </section>
+    <section>
+        <div id="video-container">
+             <div class="video-description"><h2>Watering Ball</h2>
+                <hr>
+            <p>This is a text that desribes a specific type of watering</p></div>
+           <iframe class="video" src="https://www.youtube.com/embed/hIWUqYERwpw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div id="video-container">
+            <div class="video-description"><h2>TrueDrop</h2>
+                <hr><p>video-description</p></div>
+          <iframe class="video" src="https://www.youtube.com/embed/vuRKKPBmGaw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+       </div>
+       <div id="video-container">
+        <div class="video-description"><h2>a couple of smart ways</h2>
+        <hr>
+    </div>
+      <iframe class="video" src="https://www.youtube.com/embed/zcRPc2MKPow" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   </div>
+    </section>
     <footer id="footer-container">
         <p><i class="fa-brands fa-twitter"></i></p>
         <p><i class="fa-brands fa-facebook"></i></p>
         <p><i class="fa-brands fa-instagram"></i></p>
-        <p>Opening hours:<br>
+        <p id="opened">"Opening hours:<br>
             09:00-18:00<br>
             Monday-Thursday
         </p>
         <p></p>
-        <p>Location<br>
+        <p id="adress">Location<br>
         24 st. Patrick road<br>
         plant-town</p>
         <p></p>
