add video section design and improve align

--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
     </section>
     <section>
         <div id="video-container">
-             <div class="video-description"><h2>Watering Ball</h2>
+             <div class="video-description"><h2>One week or less</h2>
                 <hr>
             <p>This is a text that desribes a specific type of watering</p></div>
            <iframe class="video" src="https://www.youtube.com/embed/hIWUqYERwpw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div id="video-container">
-            <div class="video-description"><h2>TrueDrop</h2>
+            <div class="video-description"><h2>Two weeks or less</h2>
                 <hr><p>video-description</p></div>
           <iframe class="video" src="https://www.youtube.com/embed/vuRKKPBmGaw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
        </div>
        <div id="video-container">
-        <div class="video-description"><h2>a couple of smart ways</h2>
+        <div class="video-description"><h2>More than two weeks</h2>
         <hr>
     </div>
       <iframe class="video" src="https://www.youtube.com/embed/zcRPc2MKPow" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
