changed layout might have to go back to precious commit. The section under the header is weird

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    
+
     <title>Have a safe plantcation</title>
 </head>
 
@@ -28,10 +28,19 @@
             </nav>
         </span>
     </header>
-    <div id="carousel-container">
-        <div id="carousel">    
+    <section id="main-picture">
+        <div id="awesome-quote"><h2>It´s So Easy!!!</h2>
+            
+            <p>Plants are awesome. Even the most urban city slickers of the concrete jungles of the world appreciate the different shades of green, the sense of life and clean air they bring. They give us a lot and the only thing they want in return is a little water and sunlight. Well, a little more at times but that’s basically it. And even though you might love your plants they are not your number one priority.  </p>
         </div>
-    </div>
+        <div id="carousel-container">
+            <div id="carousel">
+                <div id="owner-picture">
+                </div>
+            </div>
+
+        </div>
+    </section>
     <section>
         <div id="fun-quote-container">
             <div id="fun-quote-text">
@@ -40,34 +49,43 @@
             </div>
         </div>
         <div id="about-container">
-            <div class="about-item">
-                <h2>"nice awesome super duper quote"</h2>
-                <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt natus dolorum voluptate eum aut
-                    odio aperiam a. Odio eaque est harum inventore ipsum illum vel? Repudiandae esse quo veniam
-                    praesentium?"</p>
-            </div>
-            <div id="owner-picture">
-            </div>
+
+        </div>
         </div>
     </section>
     <section>
         <div id="video-container">
-             <div class="video-description"><h2>One week or less</h2>
+            <div class="video-description">
+                <h2>One week or less</h2>
                 <hr>
-            <p>This is a text that desribes a specific type of watering</p></div>
-           <iframe class="video" src="https://www.youtube.com/embed/hIWUqYERwpw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <p>This is a text that desribes a specific type of watering</p>
+            </div>
+            <iframe class="video" src="https://www.youtube.com/embed/hIWUqYERwpw" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </div>
         <div id="video-container">
-            <div class="video-description"><h2>Two weeks or less</h2>
-                <hr><p>video-description</p></div>
-          <iframe class="video" src="https://www.youtube.com/embed/vuRKKPBmGaw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-       </div>
-       <div id="video-container">
-        <div class="video-description"><h2>More than two weeks</h2>
-        <hr>
-    </div>
-      <iframe class="video" src="https://www.youtube.com/embed/zcRPc2MKPow" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-   </div>
+            <div class="video-description">
+                <h2>Two weeks or less</h2>
+                <hr>
+                <p>video-description</p>
+            </div>
+            <iframe class="video" src="https://www.youtube.com/embed/vuRKKPBmGaw" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
+        <div id="video-container">
+            <div class="video-description">
+                <h2>More than two weeks</h2>
+                <hr>
+            </div>
+            <iframe class="video" src="https://www.youtube.com/embed/zcRPc2MKPow" title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
     </section>
     <footer id="footer-container">
         <p><i class="fa-brands fa-twitter"></i></p>
@@ -79,13 +97,13 @@
         </p>
         <p></p>
         <p id="adress">Location<br>
-        24 st. Patrick road<br>
-        plant-town</p>
+            24 st. Patrick road<br>
+            plant-town</p>
         <p></p>
     </footer>
 
 
-<script src="https://kit.fontawesome.com/51932b41cf.js" crossorigin="anonymous"></script> 
+    <script src="https://kit.fontawesome.com/51932b41cf.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
