--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <div id="welcome-animation"></div>
     <header id="header">
         <span id="logo-big">
             <h1>PlantCation</h1>
@@ -28,63 +29,66 @@
             </nav>
         </span>
     </header>
-    <section id="main-picture">
-        <div id="awesome-quote"><h2>It´s So Easy!!!</h2>
-            
-            <p>Plants are awesome. Even the most urban city slickers of the concrete jungles of the world appreciate the different shades of green, the sense of life and clean air they bring. They give us a lot and the only thing they want in return is a little water and sunlight. Well, a little more at times but that’s basically it. And even though you might love your plants they are not your number one priority.  </p>
+
+    <section id="presentation">
+        <div id="awesome-quote">
+            <div id="owner-picture"></div>
+            <h2>It´s So Easy!!!</h2>
+            <hr>
+            <p>"Plants are awesome. Even the most urban city slickers of the concrete jungles of the world appreciate
+                the
+                different shades of green, the sense of life and clean air they bring. They give us a lot and the only
+                thing they want in return is a little water and sunlight. Well, a little more at times but that’s
+                basically it. And even though you might love your plants they are not your number one priority." </p>
         </div>
-        <div id="carousel-container">
-            <div id="carousel">
-                <div id="owner-picture">
+        <div id="fun-quote-text">
+            <h2>"Its REALLY easy</h2>
+            <p>once you know how to do it!</p>
+        </div>
+
+    </section>
+
+    <section>
+
+    </section>
+    <section id="about-section">
+        <div id="flip-card-container">
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="assets/images/" alt="Avatar">
+                    </div>
+                    <div class="flip-card-back">
+                        <h1>John Doe</h1>
+                        <p>Architect & Engineer</p>
+                        <p>We love that guy</p>
+                    </div>
                 </div>
             </div>
-
-        </div>
-    </section>
-    <section>
-        <div id="fun-quote-container">
-            <div id="fun-quote-text">
-                <h2>"Its <span>REALLY"</span> easy</h2>
-                <p><i>once you know how to do it! </i></p>
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="assets/images/" alt="Avatar">
+                    </div>
+                    <div class="flip-card-back">
+                        <h1>John Doe</h1>
+                        <p>Architect & Engineer</p>
+                        <p>We love that guy</p>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div id="about-container">
-
-        </div>
-        </div>
-    </section>
-    <section>
-        <div id="video-container">
-            <div class="video-description">
-                <h2>One week or less</h2>
-                <hr>
-                <p>This is a text that desribes a specific type of watering</p>
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <div class="flip-card-front">
+                        <img src="assets/images/" alt="Avatar">
+                    </div>
+                    <div class="flip-card-back">
+                        <h1>John Doe</h1>
+                        <p>Architect & Engineer</p>
+                        <p>We love that guy</p>
+                    </div>
+                </div>
             </div>
-            <iframe class="video" src="https://www.youtube.com/embed/hIWUqYERwpw" title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </div>
-        <div id="video-container">
-            <div class="video-description">
-                <h2>Two weeks or less</h2>
-                <hr>
-                <p>video-description</p>
-            </div>
-            <iframe class="video" src="https://www.youtube.com/embed/vuRKKPBmGaw" title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </div>
-        <div id="video-container">
-            <div class="video-description">
-                <h2>More than two weeks</h2>
-                <hr>
-            </div>
-            <iframe class="video" src="https://www.youtube.com/embed/zcRPc2MKPow" title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
         </div>
     </section>
     <footer id="footer-container">
