add intro animation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,23 @@
 </head>
 
 <body>
-    <div id="welcome-animation"></div>
+    <div id="welcome-animation">
+        <div id="welcome-animation-top">
+            <h1 id="we">WE</h1>
+        </div>
+
+        <div id="welcome-animation-right">
+            <h1 id="l">LC</h1>
+        </div>
+
+        <div id="welcome-animation-bottom">
+            <h1 id="me">E.</h1>
+        </div>
+
+        <div id="welcome-animation-left">
+            <h1 id="co">OM</h1>
+        </div>
+    </div>
     <header id="header">
         <span id="logo-big">
             <h1>PlantCation</h1>
@@ -35,11 +51,14 @@
             <div id="owner-picture"></div>
             <h2>It´s So Easy!!!</h2>
             <hr>
-            <p>"Plants are awesome. Even the most urban city slickers of the concrete jungles of the world appreciate
+            <p>"Plants are awesome. Even the most urban city slickers of the concrete jungles of the world
+                appreciate
                 the
-                different shades of green, the sense of life and clean air they bring. They give us a lot and the only
+                different shades of green, the sense of life and clean air they bring. They give us a lot and the
+                only
                 thing they want in return is a little water and sunlight. Well, a little more at times but that’s
-                basically it. And even though you might love your plants they are not your number one priority." </p>
+                basically it. And even though you might love your plants they are not your number one priority."
+            </p>
         </div>
         <div id="fun-quote-text">
             <h2>"Its REALLY easy</h2>
