add introanimation sliding quad

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
         </div>
 
         <div id="welcome-animation-right">
-            <h1 id="l">LC</h1>
+            <h1 id="lc">LC</h1>
         </div>
 
         <div id="welcome-animation-bottom">
-            <h1 id="me">E.</h1>
+            <h1 id="e">E.</h1>
         </div>
 
         <div id="welcome-animation-left">
-            <h1 id="co">OM</h1>
+            <h1 id="om">OM</h1>
         </div>
     </div>
     <header id="header">
@@ -49,15 +49,11 @@
     <section id="presentation">
         <div id="awesome-quote">
             <div id="owner-picture"></div>
-            <h2>It´s So Easy!!!</h2>
+            <h2>Keeping your plants alive!</h2>
             <hr>
-            <p>"Plants are awesome. Even the most urban city slickers of the concrete jungles of the world
-                appreciate
-                the
-                different shades of green, the sense of life and clean air they bring. They give us a lot and the
-                only
-                thing they want in return is a little water and sunlight. Well, a little more at times but that’s
-                basically it. And even though you might love your plants they are not your number one priority."
+            <p>might seem impossible at times. But don´t worry. Our expertice will make your plants thrive while you can focus on what is important in your life. <br>
+                Choose a card that corresponds with how long you want your plants to stay alive without you. And remember, theese systems are perfect no matter if you´re going away or just have a lot on your plate. <br>
+                /Eric professor of plant biology - UCLA
             </p>
         </div>
         <div id="fun-quote-text">
