add intro. changed to white background adjusting flipcards

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 <body>
     <div id="welcome-animation">
         <div id="welcome-animation-top">
-            <h1 id="we">WE</h1>
+            <div id="we">WE</div>
         </div>
 
         <div id="welcome-animation-right">
-            <h1 id="lc">LC</h1>
+            <div id="lc">LC</div>
         </div>
 
         <div id="welcome-animation-bottom">
-            <h1 id="e">E.</h1>
+            <div id="e">E.</div>
         </div>
 
         <div id="welcome-animation-left">
-            <h1 id="om">OM</h1>
+            <div id="om">OM</div>
         </div>
     </div>
     <header id="header">
@@ -49,9 +49,9 @@
     <section id="presentation">
         <div id="awesome-quote">
             <div id="owner-picture"></div>
-            <h2>Keeping your plants alive!</h2>
+            <h2>Keep your plants alive!</h2>
             <hr>
-            <p>might seem impossible at times. But don´t worry. Our expertice will make your plants thrive while you can focus on what is important in your life. <br>
+            <p>It might seem impossible at times. But don´t worry. Our expertice will make your plants thrive while you can focus on what is important in your life. <br>
                 Choose a card that corresponds with how long you want your plants to stay alive without you. And remember, theese systems are perfect no matter if you´re going away or just have a lot on your plate. <br>
                 /Eric professor of plant biology - UCLA
             </p>
@@ -71,7 +71,7 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="assets/images/" alt="Avatar">
+                        <img src="/assets/images/watering-ball.webp" style="width:300px;height:300px;" alt="Avatar">
                     </div>
                     <div class="flip-card-back">
                         <h1>John Doe</h1>
@@ -83,7 +83,7 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="assets/images/" alt="Avatar">
+                        <img src="/assets/images/drop.webp" style="width:300px;height:300px;" alt="Avatar">
                     </div>
                     <div class="flip-card-back">
                         <h1>John Doe</h1>
@@ -95,7 +95,7 @@
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <div class="flip-card-front">
-                        <img src="assets/images/" alt="Avatar">
+                        <img src="/assets/images/string.jpeg" style="width:300px;height:300px;" alt="Avatar">
                     </div>
                     <div class="flip-card-back">
                         <h1>John Doe</h1>
