--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 <body>
     <div id="welcome-animation">
         <div id="welcome-animation-top">
-            <div id="we">WE</div>
+            <div id="we"></div>
         </div>
 
         <div id="welcome-animation-right">
-            <div id="lc">LC</div>
+            <div id="lc"></div>
         </div>
 
         <div id="welcome-animation-bottom">
-            <div id="e">E.</div>
+            <div id="e"></div>
         </div>
 
         <div id="welcome-animation-left">
-            <div id="om">OM</div>
+            <div id="om"></div>
         </div>
     </div>
     <header id="header">
@@ -39,72 +39,47 @@
                     <li class="nav-item">Home</li>
                     <li class="nav-item">About</li>
                     <li class="nav-item">Products</li>
-                    <li class="nav-item">Shop</li>
-                    <li class="nav-item">Sign Up!</li>
                 </ul>
             </nav>
         </span>
     </header>
 
-    <section id="presentation">
-        <div id="awesome-quote">
-            <div id="owner-picture"></div>
-            <h2>Keep your plants alive!</h2>
-            <hr>
-            <p>It might seem impossible at times. But don´t worry. Our expertice will make your plants thrive while you can focus on what is important in your life. <br>
-                Choose a card that corresponds with how long you want your plants to stay alive without you. And remember, theese systems are perfect no matter if you´re going away or just have a lot on your plate. <br>
-                /Eric professor of plant biology - UCLA
-            </p>
+    <section>
+        <div id="presentation-container">
+            <div id="presentation">
+                <img id="plant-guy" src="assets/images/plant-guy.webp">
+                <h2>Keep your plants alive!</h2>
+                <hr>
+                <p> We have <span>3</span> simple, cheap and genius ways of making your plants thrive while your not
+                    there.<br>
+                    Choose yours below <i class="fa-solid fa-arrow-down-long"></i>
+                </p>
+            </div>
         </div>
+
         <div id="fun-quote-text">
-            <h2>"Its REALLY easy</h2>
-            <p>once you know how to do it!</p>
+            <h2>"Keeping it simple"</h2>
+            <p>Come home to a green home no matter if you're gona a  week or a month"</p>
         </div>
 
     </section>
-
     <section>
-
+        <div id="products-container">
+            <div class="product-class"> 
+                <h2>Watering ball</h2> 
+                <iframe src="https://www.youtube.com/embed/UUC6qgTrrZw" height="300px" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="product-class"> 
+                <h2>Drop</h2>   
+                <iframe src="https://www.youtube.com/embed/zcRPc2MKPow" height="300px" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="product-class">   
+                <h2>String</h2> 
+                <iframe src="https://www.youtube.com/embed/9E-i_RIPbJ8" height="300px" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
     </section>
     <section id="about-section">
-        <div id="flip-card-container">
-            <div class="flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <img src="/assets/images/watering-ball.webp" style="width:300px;height:300px;" alt="Avatar">
-                    </div>
-                    <div class="flip-card-back">
-                        <h1>John Doe</h1>
-                        <p>Architect & Engineer</p>
-                        <p>We love that guy</p>
-                    </div>
-                </div>
-            </div>
-            <div class="flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <img src="/assets/images/drop.webp" style="width:300px;height:300px;" alt="Avatar">
-                    </div>
-                    <div class="flip-card-back">
-                        <h1>John Doe</h1>
-                        <p>Architect & Engineer</p>
-                        <p>We love that guy</p>
-                    </div>
-                </div>
-            </div>
-            <div class="flip-card">
-                <div class="flip-card-inner">
-                    <div class="flip-card-front">
-                        <img src="/assets/images/string.jpeg" style="width:300px;height:300px;" alt="Avatar">
-                    </div>
-                    <div class="flip-card-back">
-                        <h1>John Doe</h1>
-                        <p>Architect & Engineer</p>
-                        <p>We love that guy</p>
-                    </div>
-                </div>
-            </div>
-        </div>
     </section>
     <footer id="footer-container">
         <p><i class="fa-brands fa-twitter"></i></p>
