add owner picture inset shadow and new footer based on grid

--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
     <section>
         <div id="presentation-container">
             <div id="presentation">
-                <img id="plant-guy" src="assets/images/plant-guy.webp">
+                <div id="image-container-plant-guy">
+                    <img id="plant-guy-image" src="assets/images/plant-guy.webp">
+                </div>  
+                <div id="image-inset-shadow">
+                </div>  
                 <h2>Keep your plants alive!</h2>
                 <hr>
                 <p> We have <span>3</span> simple, cheap and genius ways of making your plants thrive while your not
@@ -81,19 +85,28 @@
     </section>
     <section id="about-section">
     </section>
-    <footer id="footer-container">
-        <p><i class="fa-brands fa-twitter"></i></p>
-        <p><i class="fa-brands fa-facebook"></i></p>
-        <p><i class="fa-brands fa-instagram"></i></p>
-        <p id="opened">"Opening hours:<br>
-            09:00-18:00<br>
-            Monday-Thursday
-        </p>
-        <p></p>
-        <p id="adress">Location<br>
-            24 st. Patrick road<br>
-            plant-town</p>
-        <p></p>
+    <footer id="footer-grid-container">
+        <div id="section-logo"><h1>PLANTCATION AB</h1></div>
+        <div id="section-opening-hours">
+                            <h3>Opening Hours</h3>
+                            Monday - Friday<br>
+                            09:00-17:00<br>
+                            Saturday - Sunday <br>
+                            Closed</div>
+        <div id="section-contact"> 
+                        <h3>Contact</h3>
+                        E-mail: <a href="mailto:webmaster@example.com">Eric Bäckman</a><br>
+                        Telephone: +47 704 90 91 21 <br>
+                        Address: Ankarstocksvägen 13 <br>
+                        168 64, Stockholm <br>
+                        Sweden
+                        </div>
+
+        <div id="section-social">
+            <a href="http://www.facebook.com" target="_blank" aria-label="link to our facebook in new tab">FACEBOOK</a>
+            <a href="http://www.twitter.com" target="_blank" aria-label="link to our twitter in new tab">Twitter</a>
+            <a href="http://www.instagram.com" target="_blank" aria-label="link to our instagram in new tab">Facebook</a>
+        </div>
     </footer>
 
 
