--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <span>
             <nav>
                 <ul id="navigation-list">
-                    <li class="nav-item">Home</li>
+                    <li class="nav-item"> <a href="#home"> Home</a> </li>
                     <li class="nav-item">About</li>
                     <li class="nav-item">Products</li>
                 </ul>
@@ -44,68 +44,65 @@
         </span>
     </header>
 
-    <section>
-        <div id="presentation-container">
-            <div id="presentation">
-                <div id="image-container-plant-guy">
-                    <img id="plant-guy-image" src="assets/images/plant-guy.webp">
-                </div>  
-                <div id="image-inset-shadow">
-                </div>  
-                <h2>Keep your plants alive!</h2>
-                <hr>
-                <p> We have <span>3</span> simple, cheap and genius ways of making your plants thrive while your not
-                    there.<br>
-                    Choose yours below <i class="fa-solid fa-arrow-down-long"></i>
-                </p>
+    <section id="home">
+        <div id="presentation-background">
+            <div id="presentation-container">
+                <div id="presentation-text">
+                    <div id="owner-picture-container"><img id="plant-guy-image" src="assets/images/plant-guy.webp">
+                    </div>
+                    <h2>Keep your plants alive!</h2>
+                    <hr>
+                    <p> We have <span>3</span> simple, cheap and genius ways of making your plants thrive while your not
+                        there.<br>
+                        Choose yours below
+                    <div id="arrow-down"> <i class="fa-solid fa-arrow-down-long"> </i></div>
+                    </p>
+                </div>
             </div>
         </div>
+    </section>
+    <section id="products-grid-container">
+            <div class="section-logo">Products</div>
+            <div id="product-1">ba</div>
+            <div id="product-2">bajs2</div>
+            <div id="product-3">bajs 3</div>
+    </section>
 
         <div id="fun-quote-text">
             <h2>"Keeping it simple"</h2>
-            <p>Come home to a green home no matter if you're gona a  week or a month"</p>
+            <p>Come home to a green home no matter if you're gona a week or a month"</p>
         </div>
 
     </section>
     <section>
-        <div id="products-container">
-            <div class="product-class"> 
-                <h2>Watering ball</h2> 
-                <iframe src="https://www.youtube.com/embed/UUC6qgTrrZw" height="300px" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="product-class"> 
-                <h2>Drop</h2>   
-                <iframe src="https://www.youtube.com/embed/zcRPc2MKPow" height="300px" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-            <div class="product-class">   
-                <h2>String</h2> 
-                <iframe src="https://www.youtube.com/embed/9E-i_RIPbJ8" height="300px" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
-        </div>
-    </section>
-    <section id="about-section">
     </section>
     <footer id="footer-grid-container">
-        <div id="section-logo"><h1>PLANTCATION AB</h1></div>
+        <div class="section-logo">
+            PLANTCATION AB
+        </div>
         <div id="section-opening-hours">
-                            <h3>Opening Hours</h3>
-                            Monday - Friday<br>
-                            09:00-17:00<br>
-                            Saturday - Sunday <br>
-                            Closed</div>
-        <div id="section-contact"> 
-                        <h3>Contact</h3>
-                        E-mail: <a href="mailto:webmaster@example.com">Eric Bäckman</a><br>
-                        Telephone: +47 704 90 91 21 <br>
-                        Address: Ankarstocksvägen 13 <br>
-                        168 64, Stockholm <br>
-                        Sweden
-                        </div>
+            <h3>Opening Hours</h3>
+            Monday - Friday<br>
+            09:00-17:00<br>
+            Saturday - Sunday <br>
+            Closed
+        </div>
+        <div id="section-contact">
+            <h3>Contact</h3>
+            E-mail: <a href="mailto:webmaster@example.com">Eric Bäckman</a><br>
+            Telephone: +47 704 90 91 21 <br>
+            Address: Ankarstocksvägen 13 <br>
+            168 64, Stockholm <br>
+            Sweden
+        </div>
 
         <div id="section-social">
-            <a href="http://www.facebook.com" target="_blank" aria-label="link to our facebook in new tab">FACEBOOK</a>
-            <a href="http://www.twitter.com" target="_blank" aria-label="link to our twitter in new tab">Twitter</a>
-            <a href="http://www.instagram.com" target="_blank" aria-label="link to our instagram in new tab">Facebook</a>
+            <a href="http://www.facebook.com" target="_blank" aria-label="link to our facebook in new tab"><i
+                    class="fa-brands fa-facebook"></i></a>
+            <a href="http://www.twitter.com" target="_blank" aria-label="link to our twitter in new tab"><i
+                    class="fa-brands fa-twitter"></i></a>
+            <a href="http://www.instagram.com" target="_blank" aria-label="link to our instagram in new tab"><i
+                    class="fa-brands fa-instagram"></i></a>
         </div>
     </footer>
 
