finished intro animation

--- a/index.html
+++ b/index.html
@@ -12,20 +12,24 @@
 
 <body>
     <div id="welcome-animation">
-        <div id="welcome-animation-top">
-            <div id="we"></div>
+        <div id="welcome-animation-upper-left">
+            <img id="upper-left-welcome-slide" src="assets/images/upper-left.png" alt="upper-left-intro-plant">
+            <h1>Hi.</h1>
         </div>
 
-        <div id="welcome-animation-right">
-            <div id="lc"></div>
+        <div id="welcome-animation-upper-right">
+            <img id="upper-right-welcome-slide" src="assets/images/upper-right.png" alt="upper-right-intro-plant">
+            <h1>Hej.</h1>
         </div>
 
-        <div id="welcome-animation-bottom">
-            <div id="e"></div>
+        <div id="welcome-animation-bottom-right">
+            <img id="bottom-right-welcome-slide" src="assets/images/bottom-right.png" alt="bottom-left-intro-plant">
+            <h1>Bonjour.</h1>
         </div>
 
-        <div id="welcome-animation-left">
-            <div id="om"></div>
+        <div id="welcome-animation-bottom-left">
+            <img id="bottom-left-welcome-slide" src="assets/images/bottom-left.png" alt="bottom-left-intro-plant"> 
+            <h1>Hola.</h1>
         </div>
     </div>
     <header id="header">
