made footer sections text-align center

--- a/index.html
+++ b/index.html
@@ -37,9 +37,10 @@
     </div>
     </div>
     <header id="header">
-        <span id="logo-big">
-            <h1>PlantCation</h1>
+        <a href="#home"><span id="logo-big">
+            <h1>Plantway</h1>
             <p>Watering Made Easy</p>
+        </a>
         </span>
         <span>
             <nav>
@@ -72,13 +73,13 @@
     </section>
     <section id="products-grid-container">
         <div class="section-logo">Products</div>
-        <div id="product-1"><h3>wSphear</h3>
+        <div id="product-1"><h3>pSphear</h3>
         <img class="product" src="assets/images/watering-ball.gif">
         </div>
-        <div id="product-2"><h3>wDrop</h3>
+        <div id="product-2"><h3>pDrop</h3>
             <img class="product" src="assets/images/Dropfeeder.gif">
         </div>
-        <div id="product-3"><h3>wString</h3>
+        <div id="product-3"><h3>pString</h3>
             <img class="product" src="assets/images/string-illustration.gif">
         </div>
         <p id="product-1-info">Our highly sophisticated yet wasy wSphear is the most advanced watering ball yet. With a uniqe design ensuring concistent waterflow your plant will get the exact ammount of water it needs. No more, No less, No problem. <br>
