add form submission data so that i recieve an email when its sent

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </p>
     </section>
     <section id="purchase">
-        <form id="purchase-form" action="/action_page.php" method="post">
+        <form id="purchase-form" action="https://formsubmit.co/eric.aj.backman@gmail.com" method="post">
             <h2>Puchase Form:</h2>
             <fieldset id="your-info">
               <legend>Your info:</legend>
@@ -165,7 +165,7 @@
               <option value="pString">pString</option>
             </select>
             <input type="number" id="how-many" name="how-many"
-                 min="1" max="100"><br>
+                 min="1" max="100" required><br>
               <label for="select-product">Select Product:</label>
             <select id="select-product" name="select-product" required>
               <option value="pSphear">pSphear</option>
