--- a/index.html
+++ b/index.html
@@ -160,14 +160,15 @@
             <h2>Puchase Form:</h2>
             <fieldset id="your-info">
                 <legend>Your info:</legend>
-                <label for="fname">First Name:<label><br>
+
+                <label for="first_name">First Name:<label><br>
                         <input id="first_name" name="first_name" placeholder="Jessica" type="text" required>
                         <br>
                         <label for="last_name">Last Name:<label><br>
-                                <input id="last_name name=" last_name" placeholder="James" type="text" required>
+                                <input id="last_name" name="last_name" placeholder="Jameson" type="text" required>
                                 <br>
                                 <label for="email">E-mail:<label><br>
-                                        <input id="email" name="email" placeholder="jessica_james@gmail.com"
+                                        <input id="email" name="email" placeholder="jessica_jameson@gmail.com"
                                             type="email" required>
                                         <br>
                                         <label for="telephone">Telephone:<label><br>
@@ -178,12 +179,14 @@
 
                                                 <p>Prefered way of communication:</p>
                                                 <label for="telephone">Telephone<label>
-                                                        <input id="tel_pref" class="way-of-communication"
-                                                            name="tel_pref" type="radio" value="tel_pref" required>
-
+                                                        <input id="tel_pref" name="prefered_communication" type="radio"
+                                                            value="tel_pref" required>
                                                         <label for="email_prefered">E-mail<label>
-                                                                <input class="way-of-communication" name="email_pref"
-                                                                    type="radio" value="email_pref" required>
+                                                                <input name=prefered_communication type="radio"
+                                                                    value="email_pref" required>
+
+
+
             </fieldset>
             <br>
 
@@ -191,27 +194,32 @@
 
             <fieldset id="purchase-info">
                 <legend>Purchase request</legend>
-                <label for="select-product">Select Product:</label>
-                <select id="select-product" name="select-product" required>
+
+                <label for="select-product-1">Select Product:</label>
+                <select id="select-product-1" name="select-product-2" required>
                     <option value="pSphear">pSphear</option>
                     <option value="pDrop">pDrop</option>
                     <option value="pString">pString</option>
                 </select>
-                <input type="number" id="how-many" name="how-many" min="1" max="100" required><br>
-                <label for="select-product">Select Product:</label>
-                <select id="select-product" name="select-product" required>
+                <input type="number" id="how-many-1" name="how-many-1" min="1" max="100" required><br>
+
+
+
+                <label for="select-product-2">Select Product:</label>
+                <select id="select-product-2" name="select-product-2" required>
                     <option value="pSphear">pSphear</option>
                     <option value="pDrop">pDrop</option>
                     <option value="pString">pString</option>
                 </select>
-                <input type="number" id="how-many" name="how-many" min="1" max="100"><br>
-                <label for="select-product">Select Product:</label>
-                <select id="select-product" name="select-product">
+                <input type="number" id="how-many-2" name="how-many-2" min="1" max="100"><br>
+
+                <label for="select-product-3">Select Product:</label>
+                <select id="select-product-3" name="select-product-3">
                     <option value="pSphear">pSphear</option>
                     <option value="pDrop">pDrop</option>
                     <option value="pString">pString</option>
                 </select>
-                <input type="number" id="how-many" name="how-many" min="1" max="100"><br>
+                <input type="number" id="how-many-3" name="how-many-3" min="1" max="100"><br>
 
 
             </fieldset>
