form works localy. now to test with email.confirmation

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <legend>Purchase request</legend>
 
                 <label for="select-product-1">Select Product:</label>
-                <select id="select-product-1" name="select-product-2" required>
+                <select id="select-product-1" name="select-product-1" required>
                     <option value="pSphear">pSphear</option>
                     <option value="pDrop">pDrop</option>
                     <option value="pString">pString</option>
@@ -223,7 +223,7 @@
 
 
             </fieldset>
-            <input id="agreement-accept" type="checkbox" required>
+            <input id="agreement-accept" type="checkbox" name="terms-accept" value="yes" required>
             <label for="agreement-accept">I accept the terms and conditions<label><br>
 
                     <input type="submit" name="submit" value="Let's Go!">
