add feather fx on products images and main body image

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
     <div id="welcome-animation-container">
         <div id="welcome-animation-upper-left">
             <img id="upper-left-welcome-slide" src="assets/images/upper-left.png" alt="upper-left-intro-plant">
-            <h1>Hi.</h1>
+            <h1>HI</h1>
         </div>
         <div id="welcome-animation-upper-right">
             <img id="upper-right-welcome-slide" src="assets/images/upper-right.png" alt="upper-right-intro-plant">
-            <h1>Hej.</h1>
+            <h1>HEJ</h1>
         </div>
         <div id="welcome-animation-bottom-right">
             <img id="bottom-right-welcome-slide" src="assets/images/bottom-right.png" alt="bottom-left-intro-plant">
-            <h1>Bonjour.</h1>
+            <h1>BONJOUR</h1>
         </div>
         <div id="welcome-animation-bottom-left">
             <img id="bottom-left-welcome-slide" src="assets/images/bottom-left.png" alt="bottom-left-intro-plant">
-            <h1>Hola.</h1>
+            <h1>HOLA</h1>
         </div>
     </div>
     </div>
@@ -70,10 +70,10 @@
             </div>
         </section>
         <section id="products-grid-container">
-            <div class="section-logo">Products</div>
+            <div class="section-logo"><h2>Products</h2></div>
             <div id="product-1">
                 <h3>p Sphear</h3>
-                <img class="product" src="assets/images/watering-ball.gif">
+                <!-- <img class="product" src="assets/images/watering-ball.gif"> -->
             </div>
             <div id="product-2">
                 <h3>pDrop</h3>
