add feather on products and put names into grid. caused issues with smaller screens. Need to fix that

--- a/index.html
+++ b/index.html
@@ -71,19 +71,13 @@
         </section>
         <section id="products-grid-container">
             <div class="section-logo"><h2>Products</h2></div>
-            <div id="product-1">
-                <h3>p Sphear</h3>
-                <!-- <img class="product" src="assets/images/watering-ball.gif"> -->
-            </div>
-            <div id="product-2">
-                <h3>pDrop</h3>
-                <img class="product" src="assets/images/Dropfeeder.gif">
-            </div>
-            <div id="product-3">
-                <h3>pString</h3>
-                <img class="product" src="assets/images/string-illustration.gif">
-            </div>
-            <p id="product-1-info">Our highly sophisticated yet wasy wSphear is the most advanced watering ball yet. With a uniqe design ensuring concistent waterflow your plant will get the exact ammount of water it needs. No more, No less, No problem. </p>
+            <div id="product-1-logo"><h2>pSPHEAR</h2></div>
+            <div id="product-2-logo"><h2>pDROP</h2></div>
+            <div id="product-3-logo"><h2>pSTRING</h2></div>
+            <div id="product-1"></div>
+            <div id="product-2"></div>
+            <div id="product-3"></div>
+            <p id="product-1-info">Our highly sophisticated yet wasy pSphear is the most advanced watering ball yet. With a uniqe design ensuring concistent waterflow your plant will get the exact ammount of water it needs. No more, No less, No problem. </p>
             <p id="product-2-info">If you have a bunch of plants pretty close to each other it might seem like a hassle to fill all those wSphears. To time consuming and frankly pretty boring. In that case you might be better of using our wDrop system. One 10liter container provide water for your plants via specially designed tubes. up to 10 plants can be fed with water like this. Works great if you travel for longer period of times or just really dont like watering your plants.</p>
             <p id="product-3-info">If you have many smaller plants in the same area of your house our magic string system will be the perfect fit. Simply fill the bowl of water and put one end of the string in the bowl and the other 2 inces down in the soil. This system can feed many plants and if you replace the bowl with an even bigger one you can increase the time you can travel. </p>
             <a href="#purchase" id="product-1-buy">13€ <i class="fa-solid fa-cart-shopping"></i></a>
